--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <h1>Hello world!</h1>
-    <p>Welcome to my GitHub Pages site!</p>
+    <p>Welcome to UTS Calander webapp!</p>
   </body>
 </html>
+![Logo](https://github.com/Darensii/byteblasteruts.com/assets/162389957/13e90fef-b34d-42b0-a98d-a20e46f85029)
