--- a/index.html
+++ b/index.html
@@ -8,3 +8,42 @@
     <p>Welcome to UTS Calander webapp!</p>
   </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Design chat box</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
+</head>
+<body>
+	<div class="chatbox">
+
+		<div class="chatlogs">
+
+			<div class="chat friend">
+				<div class="user-photo"><img src="img/123.jpg"></div>
+				<p class="chat-message">hey whats up...!!</p>
+	</div>
+	<div class="chat self">
+		<div class="user-photo"><img src="img/124.jpg"></div>
+		<p class="chat-message">hey how r u doing..!!</p>
+	</div>
+	
+	<div class="chat friend">
+				<div class="user-photo"><img src="img/123.jpg"></div>
+				<p class="chat-message">im fine how are you!!</p>
+	</div>
+	<div class="chat self">
+		<div class="user-photo"><img src="img/124.jpg"></div>
+		<p class="chat-message">im good</p>
+	</div>
+	
+</div>
+
+
+<div class="chat-form">
+	<textarea></textarea>
+	<button>Send</button>
+</div>
+</body>
+</html>
