--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>My GitHub Pages Site</title>
   </head>
   <body>
-    <h1>Hello world!</h1>
-    <p>Welcome to UTS Calander webapp!</p>
+    <h1>UTCalander!!!</h1>
+    <p>Welcome to UTCalander webapp!</p>
   </body>
 </html>
 
