--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<div class="chatlogs">
 
 			<div class="chat friend">
-				<div class="user-photo"><img src="img/123.jpg"></div>
+				<div class="user-photo"><img src="img/chatbox.jpg"></div>
 				<p class="chat-message">hey whats up...!!</p>
 	</div>
 	<div class="chat self">
@@ -30,7 +30,7 @@
 	</div>
 	
 	<div class="chat friend">
-				<div class="user-photo"><img src="img/123.jpg"></div>
+				<div class="user-photo"><img src="img/chatbox.jpg"></div>
 				<p class="chat-message">im fine how are you!!</p>
 	</div>
 	<div class="chat self">
