--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
 		<div class="chatlogs">
 
-			<div class="chat friend">
+			<div class="chatbot">
 				<div class="user-photo"><img src="img/chatbox.jpg"></div>
 				<p class="chat-message">hey whats up...!!</p>
 	</div>
@@ -29,7 +29,7 @@
 		<p class="chat-message">hey how r u doing..!!</p>
 	</div>
 	
-	<div class="chat friend">
+	<div class="chatbot">
 				<div class="user-photo"><img src="img/chatbox.jpg"></div>
 				<p class="chat-message">im fine how are you!!</p>
 	</div>
