--- a/index.html
+++ b/index.html
@@ -22,20 +22,20 @@
 
 			<div class="chatbot">
 				<div class="user-photo"><img src="img/123.jpg"></div>
-				<p class="chat-message">hey whats up...!!</p>
+				<p class="chat-message">Welcome to UTCalander!!</p>
 	</div>
 	<div class="chat self">
 		<div class="user-photo"><img src="img/124.jpg"></div>
-		<p class="chat-message">hey how r u doing..!!</p>
+		<p class="chat-message">What is UTCalander?</p>
 	</div>
 	
 	<div class="chatbot">
 				<div class="user-photo"><img src="img/123.jpg"></div>
-				<p class="chat-message">im fine how are you!!</p>
+				<p class="chat-message">UTCalander is a.....</p>
 	</div>
 	<div class="chat self">
 		<div class="user-photo"><img src="img/124.jpg"></div>
-		<p class="chat-message">im good</p>
+		<p class="chat-message">Oh Well,Nice to know it!!</p>
 	</div>
 	
 </div>
