--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	</div>
 	<div class="chat self">
 		<div class="user-photo"><img src="img/124.jpg"></div>
-		<p class="chat-message">What is UTCalander?</p>
+		<p class="chat-message">What is UTCalander??</p>
 	</div>
 	
 	<div class="chatbot">
