--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>My GitHub Pages Site</title>
-  </head>
-  <body>
-    <h1>UTCalander!!!</h1>
-    <p>Welcome to UTCalander webapp!</p>
-  </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Image</title>
+</head>
+<body>
+    <header>
+        <img src=" UTS.jpg
+	width ="80px" 
+	height ="100px"
+        
+        <!-- You can add other header content here -->
+    </header>
+</body>
 </html>
 
 <!DOCTYPE html>
