--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <img src=" UTS.jpg
+        <img src=" UTS Logo.jpg
 	width ="80px" 
 	height ="100px"
         
