--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <header>
-        <img src=" "C:\Users\User\Downloads\UTS Logo.jpg"
+        <img src=" "C:\Users\User\Downloads\UTS Logo.jpg"\
+	    <img src="https://ibb.co/P6R1yZY">
 	width ="80px" 
 	height ="100px"
         
