--- a/index.html
+++ b/index.html
@@ -4,14 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image</title>
+	<style>
+		.image-container
+		{
+			 position: fixed; 
+            top: 50%; 
+            left: 50%; 
+            transform: translate(-50%, -50%);
+		}	
+	</style>
 </head>
 <body>
     <header>
         <img src=" "C:\Users\User\Downloads\UTS Logo.jpg"\
 	width ="80px" 
 	height ="100px"
-        
-        <!-- You can add other header content here -->
+
+	    <div class="image-container">
+		      <img src="path" width="100px" height="120px">
+		     </div> 
     </header>
 </body>
 </html>
