--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		.image-container
 		{
 			 position: fixed; 
-            top: 50%; 
+            top: 0; 
             left: 50%; 
-            transform: translate(-50%, -50%);
+            transform: translateX(-50%);
 		}	
 	</style>
 </head>
