--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 	height ="100px"
 
 	    <div class="image-container">
-		      <img src="path" width="100px" height="120px">
+		      <img src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="100px" height="120px">
 		     </div> 
     </header>
 </body>
