--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image</title>
 	<style>
-		.image-container
+		img#image-A
 		{
 			 position: fixed; 
-            top: 0; 
+            top: 10%; 
             left: 50%; 
             transform: translateX(-50%);
 		}	
@@ -19,10 +19,8 @@
         <img src=" "C:\Users\User\Downloads\UTS Logo.jpg"\
 	width ="80px" 
 	height ="100px"
-
-	    <div class="image-container">
-		      <img src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="100px" height="120px">
-		     </div> 
+	    
+		      <img id="image-A" src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="100px" height="120px">
     </header>
 </body>
 </html>
