--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image</title>
 	<style>
-		img#image-A
+		img#A
 		{
 			 position: fixed; 
             top: 10%; 
@@ -20,7 +20,7 @@
 	width ="80px" 
 	height ="100px"
 	    
-		      <img id="image-A" src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="100px" height="120px">
+		      <img id="A" src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="100px" height="120px">
     </header>
 </body>
 </html>
