--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image</title>
 	<style>
-		img#A
+		img#imgA
 		{
-			 position: fixed; 
+	position: fixed; 
             top: 10%; 
             left: 50%; 
             transform: translateX(-50%);
@@ -20,7 +20,7 @@
 	width ="80px" 
 	height ="100px"
 	    
-		      <img id="A" src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="100px" height="120px">
+		      <img id="imgA" src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="100px" height="120px">
     </header>
 </body>
 </html>
