--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
 	width ="80px" 
 	height ="100px"
 	    
-  <img src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="100px" height="120px">
     </header>
+	<style>
+        /* CSS for centering the image */
+        img#image-A {
+            position: fixed;
+            top: 10%; 
+            left: 50%; 
+            transform: translateX(-50%); 
+        }
+    </style>
+	 <img id="image-A" src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="100px" height="120px">
 </body>
 </html>
 
