--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
             left: 50%; 
             transform: translateX(-50%); 
         }
+	body
+	{
+            background-color: transparent;
+	}
     </style>
 	 <img id="image-A" src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="120px" height="120px">
 </body>
