--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             left: 50%; 
             transform: translateX(-50%); 
         }
-	body
+	html, body
 	{
             background-color: transparent;
 	}
