--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image</title>
 </head>
-<body>
+<body style="background-color: transparent;">
     <header>
         <img src=" "C:\Users\User\Downloads\UTS Logo.jpg"\
 	width ="80px" 
@@ -20,10 +20,6 @@
             left: 50%; 
             transform: translateX(-50%); 
         }
-	html, body
-	{
-            background-color: transparent;
-	}
     </style>
 	 <img id="image-A" src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="120px" height="120px">
 </body>
