--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <img src=" "C:\Users\User\Downloads\UTS Logo.jpg"\
 	width ="80px" 
 	height ="100px"
-
+	    
     </header>
 	<style>
         /* CSS for centering the image */
@@ -23,6 +23,10 @@
 	 <img id="image-A" src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="120px" height="120px">
 </body>
 </html>
+
+<!DOCTYPE html>
+<html>
+<head>
 	<title>Design chat box</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -82,17 +86,6 @@
         }
     });
 </script>
-    <script>
-        const targetUrl = 'https://api.gemini.ai/studio/v1'; 
-        fetch(targetUrl)
-            .then(response => response.text())
-            .then(data => {
-                document.getElementById('content').textContent = data;
-            })
-            .catch(error => {
-                console.error('请求失败：', error);
-            });
-    </script>
 </body>
 <style>
 body {
