--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
 </div>
 
 <script>
+<script src="myscripts.js">
     document.getElementById('questionForm').addEventListener('submit', async (event) => {
         event.preventDefault(); // Prevent default form submission
         const question = document.getElementById('question').value;
