--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image</title>
+
+	    <link rel="stylesheet" href="myscripts.js">
+
 </head>
     <header>
         <img src=" "C:\Users\User\Downloads\UTS Logo.jpg"\
