--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image</title>
 
-	    <link rel="stylesheet" href="myscripts.js">
+	    <link rel="stylesheet" href="server.js">
 
 </head>
     <header>
@@ -89,6 +89,7 @@
         }
     });
 </script>
+ <script src="server.js"></script>
 </body>
 <style>
 body {
