--- a/index.html
+++ b/index.html
@@ -67,6 +67,27 @@
     <div id="answer"></div>
 </div>
 
+<script>
+    document.getElementById('questionForm').addEventListener('submit', async (event) => {
+        event.preventDefault(); // Prevent default form submission
+        const question = document.getElementById('question').value;
+        
+        try {
+            const response = await fetch('/ask', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ question })
+            });
+
+            const data = await response.json();
+            document.getElementById('answer').textContent = data.answer;
+        } catch (error) {
+            console.error('Error:', error);
+            document.getElementById('answer').textContent = 'An error occurred. Please try again later.';
+        }
+    });
 </script>
  <script src="server.js"></script>
 </body>
