--- a/index.html
+++ b/index.html
@@ -97,3 +97,32 @@ body {
 }
 </style>
 </html>
+
+<html>
+  <body>
+    <!-- ... Your HTML and CSS -->
+
+    <script type="importmap">
+      {
+        "imports": {
+          "@google/generative-ai": "https://esm.run/@google/generative-ai"
+        }
+      }
+    </script>
+    <script type="module">
+      import { GoogleGenerativeAI } from "@google/generative-ai";
+
+      // Fetch your API_KEY
+      const API_KEY = "AIzaSyC2kBnw20EYMqeCi6dI6xzX2qOzFegwYyo";
+
+      // Access your API key (see "Set up your API key" above)
+      const genAI = new GoogleGenerativeAI(API_KEY);
+
+      // ...
+
+      const model = genAI.getGenerativeModel({ model: "gemini-pro"});
+
+      // ...
+    </script>
+  </body>
+</html>
