--- a/index.html
+++ b/index.html
@@ -1,128 +1,37 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+<!-- Coding By CodingNepal - www.codingnepalweb.com -->
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title>Chatbot in JavaScript | CodingNepal</title>
+    <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image</title>
-
-	    <link rel="stylesheet" href="server.js">
-
-</head>
-    <header>
-        <img src=" "C:\Users\User\Downloads\UTS Logo.jpg"\
-	width ="80px" 
-	height ="100px"
-	    
-    </header>
-	<style>
-        /* CSS for centering the image */
-        img#image-A {
-            position: fixed;
-            top: 5%; 
-            left: 50%; 
-            transform: translateX(-50%); 
-        }
-    </style>
-	 <img id="image-A" src="https://github.com/Darensii/byteblasteruts.com/assets/163117234/9b035562-5627-466a-9fbb-8fbe4f2130e7" width="120px" height="120px">
-</body>
-</html>
-
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Design chat box</title>
-	<link rel="stylesheet" type="text/css" href="style.css">
-</head>
-<body>
-	<div class="chatbox">
-
-		<div class="chatlogs">
-
-			<div class="chatbot">
-				<div class="user-photo"><img src="img/123.jpg"></div>
-				<p class="chat-message">Welcome to UTCalander!!</p>
-	</div>
-	<div class="chat self">
-		<div class="user-photo"><img src="img/124.jpg"></div>
-		<p class="chat-message">What is UTCalander??</p>
-	</div>
-	
-	<div class="chatbot">
-				<div class="user-photo"><img src="img/123.jpg"></div>
-				<p class="chat-message">UTCalander is a.....</p>
-	</div>
-	<div class="chat self">
-		<div class="user-photo"><img src="img/124.jpg"></div>
-		<p class="chat-message">Oh Well,Nice to know it!!</p>
-	</div>
-	
-</div>
-
-<!-- HTML for asking a question -->
-<div class="chat-form">
-    <form id="questionForm">
-        <textarea id="question" placeholder="Ask a question..."></textarea>
-        <button type="submit">Send</button>
-    </form>
-    <div id="answer"></div>
-</div>
-
-<script>
-    document.getElementById('questionForm').addEventListener('submit', async (event) => {
-        event.preventDefault(); // Prevent default form submission
-        const question = document.getElementById('question').value;
-        
-        try {
-            const response = await fetch('/ask', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({ question })
-            });
-
-            const data = await response.json();
-            document.getElementById('answer').textContent = data.answer;
-        } catch (error) {
-            console.error('Error:', error);
-            document.getElementById('answer').textContent = 'An error occurred. Please try again later.';
-        }
-    });
-</script>
- <script src="server.js"></script>
-</body>
-<style>
-body {
-  background-image: url('https://github.com/Darensii/byteblasteruts.com/assets/162389957/32a08f60-4546-4b49-9c13-9f76561a90fa');
-}
-</style>
-</html>
-
-<html>
+    <!-- Google Fonts Link For Icons -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <script src="script.js" defer></script>
+  </head>
   <body>
-    <!-- ... Your HTML and CSS -->
+    <button class="chatbot-toggler">
+      <span class="material-symbols-rounded">mode_comment</span>
+      <span class="material-symbols-outlined">close</span>
+    </button>
+    <div class="chatbot">
+      <header>
+        <h2>Chatbot</h2>
+        <span class="close-btn material-symbols-outlined">close</span>
+      </header>
+      <ul class="chatbox">
+        <li class="chat incoming">
+          <span class="material-symbols-outlined">smart_toy</span>
+          <p>Hi there 👋<br>How can I help you today?</p>
+        </li>
+      </ul>
+      <div class="chat-input">
+        <textarea placeholder="Enter a message..." spellcheck="false" required></textarea>
+        <span id="send-btn" class="material-symbols-rounded">send</span>
+      </div>
+    </div>
 
-    <script type="importmap">
-      {
-        "imports": {
-          "@google/generative-ai": "https://esm.run/@google/generative-ai"
-        }
-      }
-    </script>
-    <script type="module">
-      import { GoogleGenerativeAI } from "@google/generative-ai";
-
-      // Fetch your API_KEY
-      const API_KEY = "AIzaSyC2kBnw20EYMqeCi6dI6xzX2qOzFegwYyo";
-
-      // Access your API key (see "Set up your API key" above)
-      const genAI = new GoogleGenerativeAI(API_KEY);
-
-      // ...
-
-      const model = genAI.getGenerativeModel({ model: "gemini-pro"});
-
-      // ...
-    </script>
   </body>
 </html>
